--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <h1>¡Pulsa click en cualquier proyecto para verlo!</h1>
         <div class="grid-container">
             <div class="grid-item">
-                <a href="./001 qr/index.html">
+                <a href="./projects/001 qr/index.html">
                     <img src="./src/img.jpg" alt="Proyecto QR" />
                 </a>
             </div>
             <div class="grid-item">
-                <a href="./001 Tarjetas Animadas/index.html">
+                <a href="./projects/001 Tarjetas Animadas/index.html">
                     <img
                         src="./src/img (1).jpg"
                         alt="Proyecto Tarjetas Animadas"
@@ -23,7 +23,7 @@
                 </a>
             </div>
             <div class="grid-item">
-                <a href="./002 testimonials-grid-section-main/index.html">
+                <a href="./projects/002 testimonials-grid-section-main/index.html">
                     <img
                         src="./src/img (2).jpg"
                         alt="Proyecto Grid Testimonials"
@@ -31,7 +31,7 @@
                 </a>
             </div>
             <div class="grid-item">
-                <a href="./003 fylo-data-storage-component-master/index.html">
+                <a href="./projects/003 fylo-data-storage-component-master/index.html">
                     <img
                         src="./src/img (3).jpg"
                         alt="Proyecto Fylo Data Storage"
@@ -39,7 +39,7 @@
                 </a>
             </div>
             <div class="grid-item">
-                <a href="./004 chat-app-css-illustration-master/index.html">
+                <a href="./projects/004 chat-app-css-illustration-master/index.html">
                     <img src="./src/img (4).jpg" alt="Proyecto Chat App" />
                 </a>
             </div>
